[gd_scene load_steps=15 format=3 uid="uid://k1uo0lo6m0vj"]

[ext_resource type="Script" path="res://scripts/jolt.gd" id="1_b37mg"]
[ext_resource type="Texture2D" uid="uid://cdepsxwjixm08" path="res://assets/SkyHDR.hdr" id="2_xs5rw"]
[ext_resource type="Texture2D" uid="uid://csvnop4qiydrp" path="res://assets/Dark/texture_13.png" id="3_28deq"]
[ext_resource type="PackedScene" uid="uid://dg7q3twyl3mq0" path="res://scenes/pivot.tscn" id="4_nldk7"]
[ext_resource type="Script" path="res://scripts/chacrterbasic.gd" id="5_mjx2h"]
[ext_resource type="Texture2D" uid="uid://djg8y25y06h5n" path="res://assets/Green/texture_09.png" id="6_5k3ef"]
[ext_resource type="PackedScene" uid="uid://bncvhwmofsey" path="res://scenes/command_input.tscn" id="7_tpnm5"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_we0dv"]
panorama = ExtResource("2_xs5rw")

[sub_resource type="Sky" id="Sky_8eako"]
sky_material = SubResource("PanoramaSkyMaterial_we0dv")

[sub_resource type="Environment" id="Environment_yebup"]
background_mode = 2
sky = SubResource("Sky_8eako")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0lyky"]
albedo_texture = ExtResource("3_28deq")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="SphereShape3D" id="SphereShape3D_ylmdr"]
radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ao57b"]
albedo_texture = ExtResource("6_5k3ef")
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_bt4fr"]
size = Vector3(300, 1, 300)

[node name="JOLT" type="Node3D"]
script = ExtResource("1_b37mg")
spread = 3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yebup")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
use_collision = true
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_0lyky")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 43.2995, 0)

[node name="pivot" parent="." instance=ExtResource("4_nldk7")]
sensitivity = 0.6

[node name="BoxParent" type="Node3D" parent="."]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("5_mjx2h")
speed = 20

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("SphereShape3D_ylmdr")

[node name="CSGSphere3D" type="CSGSphere3D" parent="CharacterBody3D"]
radius = 2.0
material = SubResource("StandardMaterial3D_ao57b")

[node name="CommandInput" parent="." instance=ExtResource("7_tpnm5")]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -30.9909, 0)
shape = SubResource("BoxShape3D_bt4fr")

[connection signal="delete_box" from="." to="CommandInput" method="_on_jolt_delete_box"]
[connection signal="new_box_spawn" from="." to="CommandInput" method="_on_jolt_new_box_spawn"]
[connection signal="change_scale" from="CommandInput" to="." method="_on_command_input_change_scale"]
[connection signal="reset_camera_button" from="CommandInput" to="." method="_on_command_input_reset_camera_button"]
[connection signal="reset_camera_button" from="CommandInput" to="pivot" method="_on_command_input_reset_camera_button"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
